service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  ports:
  - port: 30719
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask-app
