ingress_flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: 133.186.152.235.nip.io
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 5000
