route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
  name: nginx-route
spec:
  host: https://b90a9d57-nks-kr1.container.nhncloud.com:6443
  port:
    targetPort: 80
#  tls:
#    insecureEdgeTerminationPolicy: Redirect
#    termination: passthrough
  to:
    kind: Service
    name: mynginx
    weight: 100
  wildcardPolicy: None
